--- a/src/app/modules/hackathons/ui/pages/hackathon-standings/hackathon-standings.page.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon-standings/hackathon-standings.page.html
@@ -17,7 +17,7 @@
   <hackathon-countdown [hackathon]="hackathon"/>
 </kep-card>
 
-<kep-table>
+<kep-table [loading]="isLoading">
   <ng-container header>
     <th class="text-center">#</th>
     <th>{{ 'HACKATHONS.CONTESTANT' | translate }}</th>
