--- a/src/app/modules/hackathons/ui/pages/hackathon-projects/hackathon-projects.page.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon-projects/hackathon-projects.page.html
@@ -1,24 +1,28 @@
-<app-content-header [contentHeader]="contentHeader"></app-content-header>
+<div class="content-wrapper container-xxl p-0">
+  <div class="content-body">
+    <app-content-header [contentHeader]="contentHeader"></app-content-header>
 
-<kep-card>
-  <div class="card-header p-2">
-    <hackathon-tab [hackathon]="{id: hackathonId}"/>
-  </div>
-</kep-card>
+    <kep-card>
+      <div class="card-header p-2">
+        <hackathon-tab [hackathon]="{id: hackathonId}"/>
+      </div>
+    </kep-card>
 
-@if (isLoading) {
-  <kep-card [cardHeight]="'300px'">
-    <spinner></spinner>
-  </kep-card>
-} @else {
-  <div class="row match-height">
-    @for (hackathonProject of data; track hackathonProject.id) {
-      <div class="col-md-6 col-lg-4">
-        <project-card
-          [hackathonProject]="hackathonProject"
-          [project]="hackathonProject.project"
-        />
+    @if (isLoading) {
+      <kep-card [cardHeight]="'300px'">
+        <spinner></spinner>
+      </kep-card>
+    } @else {
+      <div class="row match-height">
+        @for (hackathonProject of data; track hackathonProject.id) {
+          <div class="col-md-6 col-lg-4">
+            <project-card
+              [hackathonProject]="hackathonProject"
+              [project]="hackathonProject.project"
+            />
+          </div>
+        }
       </div>
     }
   </div>
-}
+</div>
