--- a/src/app/modules/projects/ui/components/project-attempts/project-attempts.component.html
+++ b/src/app/modules/projects/ui/components/project-attempts/project-attempts.component.html
@@ -1,26 +1,27 @@
-<div class="mb-2">
-  @if (currentUser) {
-    <div class="custom-control custom-control-info custom-checkbox d-flex align-items-center justify-content-start gap-1">
+@if (currentUser && !hackathonId) {
+  <div class="mb-2">
+    <div
+      class="custom-control custom-control-info custom-checkbox d-flex align-items-center justify-content-start gap-1">
       <input type="checkbox" class="form-check-input" [(ngModel)]="myAttempts" (change)="myAttemptsClick()"
              [ngModelOptions]="{standalone: true}" id="myAttempts"/>
       <label class="form-check-label" for="myAttempts">{{ 'MY_ATTEMPTS' | translate }}</label>
     </div>
-  }
-</div>
+  </div>
+}
 
 <attempts-table [attempts]="attempts" [project]="project"></attempts-table>
 
 <div class="mt-4">
   <kep-pagination
-    [collectionSize]="total"
-    [(page)]="pageNumber"
-    [pageSize]="pageSize"
-    [maxSize]="maxSize"
-    [rotate]="true"
-    [disabled]="isLoading"
-    [color]="'info'"
-    [pageOptions]="pageOptions"
+    (pageChange)="pageChange($event)"
     (pageSizeChange)="pageSizeChange($event)"
-    (pageChange)="pageChange($event)">
+    [(page)]="pageNumber"
+    [collectionSize]="total"
+    [color]="'info'"
+    [disabled]="isLoading"
+    [maxSize]="maxSize"
+    [pageOptions]="pageOptions"
+    [pageSize]="pageSize"
+    [rotate]="true">
   </kep-pagination>
 </div>
