--- a/src/app/modules/hackathons/ui/pages/hackathon-projects/hackathon-projects.page.html
+++ b/src/app/modules/hackathons/ui/pages/hackathon-projects/hackathon-projects.page.html
@@ -4,7 +4,7 @@
 
     <kep-card>
       <div class="card-header p-2">
-        <hackathon-tab [hackathon]="{id: hackathonId}"/>
+        <hackathon-tab [hackathon]="hackathon"/>
       </div>
     </kep-card>
 
