--- a/src/app/modules/hackathons/ui/components/hackathon-table/hackathon-table.component.html
+++ b/src/app/modules/hackathons/ui/components/hackathon-table/hackathon-table.component.html
@@ -20,9 +20,9 @@
           <kep-icon name="hackathon"/>
           {{ hackathon.title }}
         </td>
-        <td class="text-center">
+        <td>
           <user-popover [customContent]="true" [username]="'admin'">
-            <div class="d-flex gap-2 align-items-center">
+            <div class="d-flex gap-2 justify-content-center align-items-center">
               <img [src]="'https://cpython.s3.amazonaws.com/media/images/avatars/admin_OZNLGhG.webp'"
                    class="avatar avatar-rounded" height="32">
               <div>
