--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,128 +32,9 @@
   }
 }
 
-@import 'styles/vuexy-extended';
-
-.tab-content .tab-pane {
-  border: none;
-  padding: 0;
-  background: inherit !important;
-}
+@import 'app/styles/scifi-extended';
 
 @import 'styles/colors/contests';
 @import 'styles/colors/chapters';
 @import 'styles/colors/study-plans';
 @import 'styles/colors/languages';
-
-.total-count {
-  font-size: 17px;
-  font-weight: 100;
-  vertical-align: super;
-  color: #888ea8;
-  letter-spacing: 2px;
-  margin-left: 0.5rem;
-}
-
-app-sidebar .active:has(> kep-icon) {
-  filter: drop-shadow(0 0 5px var(--primary));
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.text-white, .text-fixed-white {
-  color: #000 !important;
-
-  @include dark-layout {
-    color: #fff !important;
-  }
-}
-
-.text-dark, .text-fixed-dark {
-  color: #000 !important;
-
-  @include dark-layout {
-    color: #fff !important;
-  }
-}
-
-.table {
-  --bs-table-bg: rgba(255, 255, 255, 0.8);
-
-  @include dark-layout {
-    --bs-table-bg: rgba(0, 0, 0, 0.1);
-  }
-}
-
-html[data-theme-mode="light"] {
-  .nav-link, pre {
-    color: black;
-  }
-
-  pre {
-    background-color: white !important;
-  }
-
-  .code-editor-sidebar .btn-toggle, .breadcrumb-item + .breadcrumb-item::before {
-    color: black !important;
-  }
-
-  .animated-arrow span {
-    &:after, &:before {
-      background-color: black !important;
-    }
-  }
-
-  .page-link {
-    background: rgba(255, 255, 255);
-    transition: none;
-  }
-
-  .page-item.active .page-link {
-    background: var(--primary);
-  }
-
-  .offcanvas, .canvas-footer, .nav-link.active, .modal-content, .custom-btn-icons, .swal2-container .swal2-popup {
-    background: white !important;
-  }
-
-  .swal2-container .swal2-styled.swal2-cancel {
-    color: white;
-  }
-
-  .swal2-container .swal2-html-container {
-    color: black;
-  }
-
-  .ng-option-label, .apexcharts-tooltip-text, .ng-select.ng-select-opened > .ng-select-container {
-    color: black !important;
-  }
-
-  span.bg-primary, .bg-primary, .text-bg-primary, .btn-primary, .tooltip-inner {
-    color: white !important;
-  }
-}
-
-html {
-  scroll-behavior: auto !important;
-}
-
-.fc-toolbar-chunk {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  &:first-child .fc-button-group:first-child {
-    display: none;
-  }
-}
-
-.fc .fc-list-event:hover td {
-  background-color: var(--primary01) !important;
-}
-
-:root {
-  --fc-event-border-color: var(--primary);
-  --fc-event-bg-color: var(--primary);
-}
