--- a/src/@core/layouts/content-layout/content-layout.component.html
+++ b/src/@core/layouts/content-layout/content-layout.component.html
@@ -1,12 +1,16 @@
 <div class="page">
   <app-header></app-header>
   <app-sidebar appHoverEffectSidebar></app-sidebar>
-  <div class="main-content app-content" (click)="clickOnBody()">
+  <div (click)="clickOnBody()" class="main-content app-content">
     <div class="container-fluid">
-      <router-outlet></router-outlet>
+      <div class="content-wrapper container-xxl p-0">
+        <div class="content-body">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
       <app-footer></app-footer>
     </div>
   </div>
 </div>
 
-<div id="responsive-overlay" (click)="clearToggle()"></div>
+<div (click)="clearToggle()" id="responsive-overlay"></div>
