refactor: use ix api table for users list

--- a/src/app/shared/components/table/ix-api-table/ix-api-table.component.html
+++ b/src/app/shared/components/table/ix-api-table/ix-api-table.component.html
@@ -44,6 +44,7 @@
     [pagesCount]="pagesCount"
     [slots]="slots"
     [total]="total"
+    [pageOptions]="pageOptions"
   >
     <ng-content></ng-content>
   </ix-table>
