users-list page

--- a/src/@core/layouts/components/footer/footer.component.html
+++ b/src/@core/layouts/components/footer/footer.component.html
@@ -52,7 +52,7 @@
 
 <hr class="m-0 p-0">
 
-<kep-card>
+<kep-card customClass="mb-0">
   <div class="content-wrapper container-xxl p-0 full-width">
     <div class="content-body">
       <div class="card-body align-items-center d-flex justify-content-between">
