--- a/src/app/shared/components/table/ix-table/ix-table.component.scss
+++ b/src/app/shared/components/table/ix-table/ix-table.component.scss
@@ -1,9 +1,10 @@
-.table thead {
+table.table thead {
   tr th {
     background: var(--gray-1) !important;
     border: none !important;
     font-weight: 600;
     text-transform: uppercase;
+    // padding: 0.75rem 0.5rem !important;
   }
 }
 
