--- a/src/app/styles/scifi-extended/skeleton.scss
+++ b/src/app/styles/scifi-extended/skeleton.scss
@@ -5,5 +5,5 @@ html[data-theme-mode="dark"] {
 }
 
 :root {
-  --skeleton-color: rgba(255, 255, 255, 0.5);
+  --skeleton-color: rgb(200, 200, 200);
 }
