--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -142,7 +142,7 @@ $youtube: #FF0000;
   --primary08: rgba(var(--primary-rgb), 0.8);
   --primary09: rgba(var(--primary-rgb), 0.9);
   --primary005: rgba(var(--primary-rgb), 0.05);
-  --default-font-family: 'Comfortaa', sans-serif;
+  --default-font-family: 'Titillium Web', sans-serif;
   --default-font-weight: 400;
   --default-text-color: #000;
   --default-text-color-rgb: 51, 51, 51;
