--- a/src/app/modules/problems/pages/problem/problem.component.html
+++ b/src/app/modules/problems/pages/problem/problem.component.html
@@ -24,13 +24,13 @@
       <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12">
           <kep-card>
-            <div class="card-header p-0">
+            <div class="card-header">
               <ul
                 #navWithIcons="ngbNav"
                 (activeIdChange)="activeIdChange($event)" [(activeId)]="activeId" [destroyOnHide]="false"
                 class="nav-tabs" ngbNav>
                 <li [ngbNavItem]="1">
-                  <a class="p-2 py-1" ngbNavLink>
+                  <a class="nav-link" ngbNavLink>
                     <kep-icon size="small-4" color="primary" name="problem" type="duotone"/>
                     {{ 'Problem' | translate }}
                   </a>
@@ -40,7 +40,7 @@
                 </li>
 
                 <li [ngbNavItem]="2">
-                  <a class="p-2 py-1" ngbNavLink>
+                  <a class="nav-link" ngbNavLink>
                     <kep-icon size="small-4" color="warning" name="attempt" type="duotone"/>
                     {{ 'Attempts' | translate }}
                   </a>
@@ -56,7 +56,7 @@
 
                 @if (problem.hasCheckInput) {
                   <li [ngbNavItem]="3" destroyOnHide="true">
-                    <a class="p-2 py-1" ngbNavLink>
+                    <a class="nav-link" ngbNavLink>
                       <kep-icon size="small-4" name="lock-2" color="dark" type="duotone"/>
                       {{ 'Hacks' | translate }}
                     </a>
