--- a/src/app/modules/users/ui/pages/users-list/users-list.page.html
+++ b/src/app/modules/users/ui/pages/users-list/users-list.page.html
@@ -1,13 +1,11 @@
 <div class="content-wrapper container-xxl p-0">
   <div class="content-body">
-    <app-content-header [contentHeader]="contentHeader"></app-content-header>
 
     <ix-api-table
       #table
       [columns]="columns"
       [fetchPage]="fetchPage"
-      [title]="'Users.Users'"
-      [pageOptions]="pageOptions"
+      [title]="'MENU.USERS'"
     >
       <div filter [formGroup]="filterForm" class="row m-0 w-100">
         <div class="col-6 col-md-3">
@@ -21,7 +19,7 @@
         <div class="col-6 col-md-3">
           <label>{{ 'Country' | translate }}</label>
           <ng-select [clearable]="false" appendTo="body" formControlName="country">
-            <ng-option [value]="''"></ng-option>
+            <ng-option [value]="''">-</ng-option>
             @for (country of countries; track country) {
               <ng-option [value]="country.id.toLowerCase()">
                 <span class="fi fi-{{ country.id.toLowerCase() }}"></span>
@@ -45,9 +43,14 @@
           <div class="avatar avatar-rounded me-2">
             <img alt="Avatar" class="avatar-rounded" [src]="user.avatar" width="48" height="48">
           </div>
-          <span class="font-medium-1">
-            {{ user.username }}
-            <span class="ms-1 fi fi-{{ user.country }}"></span>
+          <span class="font-small-4">
+            <div class="text-nowrap">
+              {{ user.username }}
+              <span class="ms-1 fi fi-{{ user.country }}"></span>
+            </div>
+            <div class="text-muted font-small-1">
+              <span class="fw-medium">{{ user.firstName }} {{ user.lastName }}</span>
+            </div>
           </span>
         </a>
       </ng-template>
@@ -57,11 +60,11 @@
       </ng-template>
 
       <ng-template cellTemplate="skillsRating" let-rating>
-        <span class="badge bg-primary badge-pill">{{ rating.value }}</span>
+        <span class="badge bg-outline-primary">{{ rating.value }}</span>
       </ng-template>
 
       <ng-template cellTemplate="activityRating" let-rating>
-        <span class="badge bg-info badge-pill">{{ rating.value }}</span>
+        <span class="badge bg-outline-info">{{ rating.value }}</span>
       </ng-template>
 
       <ng-template cellTemplate="contestsRating" let-rating>
@@ -82,8 +85,10 @@
       <ng-template cellTemplate="kepcoin" let-value>
         <kepcoin [value]="value"></kepcoin>
       </ng-template>
+
+      <ng-template cellTemplate="lastSeen" let-value>
+        <span class="text-muted">{{ value }}</span>
+      </ng-template>
     </ix-api-table>
   </div>
 </div>
-
-<ng-select-css></ng-select-css>
