--- a/src/app/modules/users/ui/pages/users-list/users-list.page.scss
+++ b/src/app/modules/users/ui/pages/users-list/users-list.page.scss
@@ -1,14 +1,5 @@
-th, td {
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important;
-}
-
-th:first-child, td:first-child {
-  padding-left: 1.5rem !important;
-  padding-right: 1rem !important;
-}
-
-td:nth-child(3), td:nth-child(4) {
-  padding-left: 0.25rem !important;
-  padding-right: 0.25rem !important;
+page-users-list ix-table {
+  .header-title {
+    white-space: nowrap;
+  }
 }
