--- a/src/app/styles/scifi-extended/badge.scss
+++ b/src/app/styles/scifi-extended/badge.scss
@@ -3,6 +3,7 @@
   --bs-badge-padding-y: 0.65em;
   --bs-badge-font-size: 0.81em;
   --bs-badge-color: #fff;
+  --bs-badge-font-weight: 500;
   padding: var(--bs-badge-padding-y) var(--bs-badge-padding-x);
   font-size: var(--bs-badge-font-size);
   font-weight: var(--bs-badge-font-weight);
