special for Bug Hunt Hackathon

--- a/src/app/modules/users/ui/pages/users-list/users-list.page.scss
+++ b/src/app/modules/users/ui/pages/users-list/users-list.page.scss
@@ -1,5 +1,11 @@
-page-users-list ix-table {
-  .header-title {
-    white-space: nowrap;
+page-users-list {
+  ix-table {
+    .header-title {
+      white-space: nowrap;
+    }
+  }
+
+  .country-hide .ng-option-label {
+    color: transparent !important;
   }
 }
