--- a/src/@core/layouts/components/footer/footer.component.html
+++ b/src/@core/layouts/components/footer/footer.component.html
@@ -41,7 +41,11 @@
           </div>
           @for (menuItem of menu[3].children; track menuItem.id) {
             <div class="mt-1">
-              <a class="text-dark" [routerLink]="menuItem.path">{{ menuItem.title | translate }}</a>
+              @if (menuItem.id == 'hackathons') {
+                <a class="text-dark" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">{{ menuItem.title | translate }}</a>
+              } @else {
+                <a class="text-dark" [routerLink]="menuItem.path">{{ menuItem.title | translate }}</a>
+              }
             </div>
           }
         </div>
