--- a/src/app/modules/projects/ui/components/project-sidebar/project-sidebar.component.html
+++ b/src/app/modules/projects/ui/components/project-sidebar/project-sidebar.component.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="card-footer text-center">
-    <button (click)="submit()" [disabled]="!fileToUpload" class="btn full-width btn-sm btn-primary">
+    <button (click)="submit()" class="btn full-width btn-sm btn-primary">
       {{ 'Submit' | translate }}
     </button>
   </div>
