--- a/src/app/modules/users/ui/pages/users-list/users-list.page.scss
+++ b/src/app/modules/users/ui/pages/users-list/users-list.page.scss
@@ -1,11 +1,5 @@
-page-users-list {
-  ix-table {
-    .header-title {
-      white-space: nowrap;
-    }
-  }
-
-  .country-hide .ng-option-label {
-    color: transparent !important;
+page-users-list ix-table {
+  .header-title {
+    white-space: nowrap;
   }
 }
