contest problem | add guard for submit

--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -118,7 +118,7 @@
             </a>
           }
 
-          <kep-card>
+          <kep-card *ngIf="contest?.userInfo?.isRegistered">
             <div class="card-header">
               <div class="card-title">
                 {{ 'Submit' | translate }}
