prepare to uzinfocom contest

--- a/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
@@ -174,7 +174,9 @@
             <button
               rippleEffect
               class="btn btn-sm round btn-gradient-primary"
-              (click)="openRegistrationModal()">
+              (click)="openRegistrationModal()"
+              style="color: #fff"
+            >
               <kep-icon size="small-4" name="username"/>
               {{ 'CONTESTS.REGISTER' | translate }}
             </button>
