refactor hackathon colors

--- a/src/app/modules/hackathons/ui/components/hackathon-card/hackathon-card.component.html
+++ b/src/app/modules/hackathons/ui/components/hackathon-card/hackathon-card.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="[Resources.Hackathon | resourceById:hackathon.id]">
-  <kep-card>
+  <kep-card [customClass]="'hackathon-' + hackathon.id">
     <div class="card-bg" style="background-image: url('{{ hackathon.logo }}');">
     </div>
 
